Started over with the HTML form, it was all incorrect and faluty and being just started wasnt too much to redo. Having CSS issues so need to get a card working to display results. Before complicating things that I know will happen

--- a/exercises/Level-02/Todos/site.css
+++ b/exercises/Level-02/Todos/site.css
@@ -1,8 +1,26 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: beige;
+    max-width: 90%;
+    text-align: center;
+}
+
 img {
-    width: 300px;
+    width: 100px;
 }
 
 .card {
-    border: 2px solid black;
+    background-color: white;
+}
+
+.details-side {
     display: flex;
+}
+
+#left-aligning {
+    text-align: left;
+    
 }
